public enum CarAction {
    PARKING,
    TURNING,
    DRIVING_STRAIGHT,
    SPEEDING
}