public abstract class TrafficSign {
}
