@startuml

    class Officer {
        + name: String
        + inspectLocation(location: Location): List<Fine>
    }

    class Location {
        + name: String
        + cars: List<Car>
        + signs: List<TrafficSign>
        + addSign(sign: TrafficSign)
        + addCar(car: Car)
    }

    abstract class TrafficSign {
    }

    class ProhibitorySign {
        + prohibitedAction: CarAction
    }

    class DirectionalSign {
        + allowedAction: CarAction
    }

    class SpeedLimitSign {
        + maxSpeed: int
    }

    class Car {
        + licensePlate: String
        + action: CarAction
        + speed: int
    }

    enum CarAction {
        PARKING
        TURNING
        SPEEDING
        DRIVING_STRAIGHT
    }

    class Fine {
        + amount: double
        + reason: String
        + timestamp: Date
    }

    class FineManager {
        + checkViolations(car: Car, location: Location): List<Fine>
    }

    Officer --|> Location
    Location o-- Car
    Location o-- TrafficSign
    TrafficSign <|-- ProhibitorySign
    TrafficSign <|-- DirectionalSign
    TrafficSign <|-- SpeedLimitSign

    FineManager ..> Fine : creates
    FineManager ..> Car
    FineManager ..> Location

    Car --> CarAction
    ProhibitorySign --> CarAction
    DirectionalSign --> CarAction

@enduml